# oaDeviceAPI

./: .gitignore  ARCHITECTURE_IMPROVEMENTS.md  DEPLOYMENT.md  LICENSE  README.md  main.py  main_improved.py  mypy.ini  pyproject.toml  requirements.txt
src/oaDeviceAPI/: __init__.py  middleware.py
src/oaDeviceAPI/core/: bootstrap.py  caching.py  config.py  config_schema.py  container.py  error_handler.py  exceptions.py  health_service.py  interfaces.py  logging.py  metrics.py  platform.py  service_factory.py  unified_metrics.py  utils.py
src/oaDeviceAPI/models/: __init__.py  health_schemas.py  schemas.py
tests/: __init__.py  conftest.py  test_unified_api.py
tests/e2e/: __init__.py  test_deployment_scenarios.py
tests/integration/: __init__.py  test_api_endpoints.py  test_cross_platform_compatibility.py  test_error_handling.py  test_platform_routers.py  test_security.py
tests/performance/: test_load_testing.py
tests/unit/: __init__.py  test_config.py  test_health_schemas.py  test_health_scoring.py  test_middleware.py  test_mocks_and_dependencies.py  test_platform_detection.py  test_platform_manager.py  test_security_comprehensive.py  test_services_macos.py  test_services_orangepi.py
